# coinbot

./: .gitignore  README.md  model.py  pyproject.toml  requirements.txt  rsi_backtest.py  rsi_strategy.ipynb
coinbot/coinbot/: rsi_backtest.py
timesfm/: coin_price_prediction1.py  toy.py
