[project]
name = "coinbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Jenny-Jo",email = "38550304+Jenny-Jo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "*", optional = true }

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry]
packages = [
    { include = "timesfm" }
]